# Astra

./: .gitignore  CMakeLists.txt  README.md  program.astra  project.astra
src/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  playground.astra  semantic.cpp  semantic.hpp
tests/: test_arithmetic.astra  test_control_flow.astra  test_enums.astra  test_functions.astra  test_phase2_pointers.astra  test_phase3_functions.astra  test_phase4_types.astra  test_phase5_oop.astra  test_structs.astra  test_variables.astra
